--- a/vasm/Cargo.toml
+++ b/vasm/Cargo.toml
@@ -3,6 +3,7 @@ name = "vasm"
 version = "0.1.0"
 authors = ["Dennis Heinze <dennisjp.heinze@gmail.com>"]
 description = "Parses and assembles VCPU assembly."
+edition = "2018"
 
 [dependencies]
 byteorder = "1"
