--- a/vexfile/Cargo.toml
+++ b/vexfile/Cargo.toml
@@ -2,6 +2,7 @@
 name = "vexfile"
 version = "0.1.0"
 authors = ["Dennis Heinze <dennisjp.heinze@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 byteorder = "1"
