--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Dennis Heinze <dennisjp.heinze@gmail.com>"]
 edition = "2018"
 
 [workspace]
-members = [ "vasm", "vexfile", "vex" ]
+members = [ "vasm", "vexfile", "vex", "vcpu-interop" ]
 
 [dependencies]
 byteorder = "1"
