add register access function to interop library

--- a/vcpu-interop/Cargo.toml
+++ b/vcpu-interop/Cargo.toml
@@ -11,3 +11,4 @@ crate-type = ["cdylib"]
 vcpu = { path = ".." }
 vexfile = { path = "../vexfile" }
 vasm = { path = "../vasm" }
+num-traits = "0.2"
