another big commit with mostly housekeeping - rename vexfile to vex - rename Program to Executable - clean up vasm parser grammar - add more documentation - add more tests - reorganize vcpu and vasm crates - add C-header generation with cbindgen

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,11 +5,20 @@
     "tasks": [
         {
             "type": "shell",
-            "label": "cargo test",
-            "command": "cargo",
-            "args": [
-                "test"
+            "label": "cargo build",
+            "command": "cargo build --all",
+            "problemMatcher": [
+                "$rustc"
             ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "type": "shell",
+            "label": "cargo test",
+            "command": "cargo test --all",
             "problemMatcher": [
                 "$rustc"
             ],
@@ -20,24 +29,8 @@
         },
         {
             "type": "shell",
-            "label": "cargo build",
-            "command": "cargo",
-            "args": [
-                "build"
-            ],
-            "problemMatcher": [
-                "$rustc"
-            ]
-        },
-        {
-            "type": "shell",
             "label": "cargo doc",
-            "command": "cargo",
-            "args": [
-                "doc",
-                "--all",
-                "--no-deps"
-            ],
+            "command": "cargo doc --all --no-deps",
             "problemMatcher": []
         }
     ]
