--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Dennis Heinze <dennisjp.heinze@gmail.com>"]
 edition = "2018"
 
 [workspace]
-members = [ "vasm", "vexfile", "vcpu-interop", "util", "util-derive" ]
+members = [ "vasm", "vex", "vcpu-interop", "util", "util-derive" ]
 
 [dependencies]
 util = { path = "util" }
