--- a/vcpu-interop/Cargo.toml
+++ b/vcpu-interop/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 vcpu = { path = ".." }
 util = { path = "../util" }
 util-derive = { path = "../util-derive" }
-vexfile = { path = "../vexfile" }
+vex = { path = "../vex" }
 vasm = { path = "../vasm" }
 num-traits = "0.2"
 num-derive = "0.2"
